replace bitfield with bitmasks
replace bitfield with bitmasks

--- a/Header/examples/blink_ISR/Makefile
+++ b/Header/examples/blink_ISR/Makefile
@@ -40,4 +40,4 @@ swim: $(PROGRAM).ihx
 	$(STM8FLASH) -c $(STM8FLASH_PROGRAMMER) -p $(STM8FLASH_DEVICE) -w $(PROGRAM).ihx
 
 serial: $(PROGRAM).ihx
-	$(STM8GAL) -p $(STM8GAL_PORT) -w $(PROGRAM).ihx -R 2
+	$(STM8GAL) -p $(STM8GAL_PORT) -w $(PROGRAM).ihx -R 2 -V
